--- a/coworking-space.API/coworking-space.API.csproj
+++ b/coworking-space.API/coworking-space.API.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\coworking-space.BAL\coworking-space.BAL.csproj" />
+  </ItemGroup>
+
 </Project>
