--- a/coworking-space.DAL/coworking-space.DAL.csproj
+++ b/coworking-space.DAL/coworking-space.DAL.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Models\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
