--- a/coworking-space.DAL/coworking-space.DAL.csproj
+++ b/coworking-space.DAL/coworking-space.DAL.csproj
@@ -8,8 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Models\" />
+    <Compile Remove="Data\mj\**" />
+    <EmbeddedResource Remove="Data\mj\**" />
+    <None Remove="Data\mj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
