--- a/coworking-space.API/appsettings.json
+++ b/coworking-space.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=coworkingSpaceDB.mssql.somee.com;Database=coworkingSpaceDB;User Id=mark_magdy_SQLLogin_1;Password=4xb5ukzr81;Packet Size=4096;Persist Security Info=False;TrustServerCertificate=True;"
+    }
+  }
 }
