--- a/coworking-space.API/coworking-space.API.csproj
+++ b/coworking-space.API/coworking-space.API.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\coworking-space.BAL\coworking-space.Bll.csproj" />
+    <ProjectReference Include="..\coworking-space.BAL\coworking-space.BAL.csproj" />
   </ItemGroup>
 
 </Project>
